src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | GuardStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock

  37  SimpleStmt : LValue '=' Expr
  38             | Call
  39             |

  40  Receiver : Expr '.'
  41           |

  42  LValue : Receiver IDENTIFIER
  43         | Expr '[' Expr ']'

  44  Call : Receiver IDENTIFIER '(' Actuals ')'

  45  Expr : LValue
  46       | Call
  47       | Constant
  48       | Expr '?' Expr ':' Expr
  49       | Expr '+' Expr
  50       | Expr '-' Expr
  51       | Expr '*' Expr
  52       | Expr '/' Expr
  53       | Expr '%' Expr
  54       | Expr EQUAL Expr
  55       | Expr NOT_EQUAL Expr
  56       | Expr '<' Expr
  57       | Expr '>' Expr
  58       | Expr LESS_EQUAL Expr
  59       | Expr GREATER_EQUAL Expr
  60       | Expr AND Expr
  61       | Expr OR Expr
  62       | '(' Expr ')'
  63       | INC Expr
  64       | DEC Expr
  65       | Expr INC
  66       | Expr DEC
  67       | '-' Expr
  68       | '!' Expr
  69       | READ_INTEGER '(' ')'
  70       | READ_LINE '(' ')'
  71       | THIS
  72       | NEW IDENTIFIER '(' ')'
  73       | NEW Type '[' Expr ']'
  74       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  75       | NUMINSTANCES '(' IDENTIFIER ')'
  76       | '(' CLASS IDENTIFIER ')' Expr

  77  Constant : LITERAL
  78           | NULL

  79  Actuals : ExprList
  80          |

  81  ExprList : ExprList ',' Expr
  82           | Expr

  83  WhileStmt : WHILE '(' Expr ')' Stmt

  84  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  85  BreakStmt : BREAK

  86  IfStmt : IF '(' Expr ')' Stmt ElseClause

  87  ElseClause : ELSE Stmt
  88             |

  89  GuardStmt : IF GuardClauses FI
  90            | DO GuardClauses OD

  91  GuardClauses : GuardClauses GUARD_SEPERATOR Expr ':' Stmt
  92               | Expr ':' Stmt

  93  ReturnStmt : RETURN Expr
  94             | RETURN

  95  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (39)
	Receiver : .  (41)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	DO  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'{'  shift 41
	'}'  shift 66
	IDENTIFIER  reduce 41
	';'  reduce 39

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	GuardStmt  goto 72
	WhileStmt  goto 73
	ForStmt  goto 74
	ReturnStmt  goto 75
	PrintStmt  goto 76
	BreakStmt  goto 77
	LValue  goto 78
	Expr  goto 79
	Call  goto 80
	Receiver  goto 81
	Constant  goto 82


state 46
	Constant : NULL .  (78)

	.  reduce 78


state 47
	Expr : THIS .  (71)

	.  reduce 71


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (83)

	'('  shift 83
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (84)

	'('  shift 84
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (86)
	GuardStmt : IF . GuardClauses FI  (89)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 85
	IDENTIFIER  reduce 41

	LValue  goto 86
	Expr  goto 87
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82
	GuardClauses  goto 89


state 51
	ReturnStmt : RETURN . Expr  (93)
	ReturnStmt : RETURN .  (94)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 41
	';'  reduce 94

	LValue  goto 86
	Expr  goto 90
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82


state 52
	BreakStmt : BREAK .  (85)

	.  reduce 85


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (72)
	Expr : NEW . Type '[' Expr ']'  (73)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 91
	.  error

	Type  goto 92


state 54
	GuardStmt : DO . GuardClauses OD  (90)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 41

	LValue  goto 86
	Expr  goto 87
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82
	GuardClauses  goto 93


state 55
	PrintStmt : PRINT . '(' ExprList ')'  (95)

	'('  shift 94
	.  error


state 56
	Expr : READ_INTEGER . '(' ')'  (69)

	'('  shift 95
	.  error


state 57
	Expr : READ_LINE . '(' ')'  (70)

	'('  shift 96
	.  error


state 58
	Constant : LITERAL .  (77)

	.  reduce 77


state 59
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (74)

	'('  shift 97
	.  error


state 60
	Expr : NUMINSTANCES . '(' IDENTIFIER ')'  (75)

	'('  shift 98
	.  error


state 61
	Expr : INC . Expr  (63)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 41

	LValue  goto 86
	Expr  goto 99
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82


state 62
	Expr : DEC . Expr  (64)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 41

	LValue  goto 86
	Expr  goto 100
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82


state 63
	Expr : '-' . Expr  (67)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 41

	LValue  goto 86
	Expr  goto 101
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82


state 64
	Expr : '!' . Expr  (68)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 41

	LValue  goto 86
	Expr  goto 102
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82


state 65
	Expr : '(' . Expr ')'  (62)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (76)
	Receiver : .  (41)

	CLASS  shift 103
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	NUMINSTANCES  shift 60
	INC  shift 61
	DEC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 41

	LValue  goto 86
	Expr  goto 104
	Call  goto 88
	Receiver  goto 81
	Constant  goto 82


state 66
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 67
	Stmt : VariableDef .  (27)

	.  reduce 27


state 68
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 69
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 70
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 105
	.  error


state 71
	Stmt : IfStmt .  (29)

	.  reduce 29


state 72
	Stmt : GuardStmt .  (30)

	.  reduce 30


state 73
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 74
	Stmt : ForStmt .  (32)

	.  reduce 32


state 75
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 106
	.  error


state 76
	Stmt : PrintStmt . ';'  (34)

	';'  shift 107
	.  error


state 77
	Stmt : BreakStmt . ';'  (35)

	';'  shift 108
	.  error


state 78
	SimpleStmt : LValue . '=' Expr  (37)
	Expr : LValue .  (45)
